src/test/deca/syntax/parser/invalid/decl_var_type_number.deca
// Test de parser, le type n'est pas valide, mais est un nombre
// à la place

{
    15 x = 5;
}